# udcode

./: .gitignore  CMakeLists.txt  README.md  config.json  curl-http.cpp  generate_sln.bat  http.cpp  http.hpp  main.cpp  read-file.cpp  read-file.hpp  settings.cpp  settings.hpp  util.cpp  util.hpp
lib/: libcurl.so.4.8.0  libcurl_a.lib
nlohmannjson/: json.hpp
src/: curl-http.hpp  main.cpp  settings.cpp  util.cpp  util.hpp
